# slurmrestapi.c

./: CMakeLists.txt  README.md  gen.sh
.openapi-generator/: FILES
api/: OpenapiAPI.c  OpenapiAPI.h  SlurmAPI.c  SlurmAPI.h
docs/: OpenapiAPI.md  SlurmAPI.md  dbv0_0_37_account.md  dbv0_0_37_account_info.md  dbv0_0_37_account_response.md  dbv0_0_37_association.md  dbv0_0_37_association_default.md  dbv0_0_37_association_max.md  dbv0_0_37_association_max_jobs.md  dbv0_0_37_association_max_jobs_per.md  dbv0_0_37_association_max_per.md  dbv0_0_37_association_max_per_account.md  dbv0_0_37_association_max_tres.md  dbv0_0_37_association_max_tres_group.md  dbv0_0_37_association_max_tres_minutes.md  dbv0_0_37_association_max_tres_minutes_per.md  dbv0_0_37_association_max_tres_per.md  dbv0_0_37_association_min.md  dbv0_0_37_association_short_info.md  dbv0_0_37_association_usage.md  dbv0_0_37_associations_info.md  dbv0_0_37_cluster_info.md  dbv0_0_37_cluster_info_associations.md  dbv0_0_37_cluster_info_controller.md  dbv0_0_37_config_info.md  dbv0_0_37_config_response.md  dbv0_0_37_coordinator_info.md  dbv0_0_37_diag.md  dbv0_0_37_diag_statistics.md  dbv0_0_37_diag_statistics_rollups_inner.md  dbv0_0_37_diag_statistics_rpcs_inner.md  dbv0_0_37_diag_statistics_rpcs_inner_time.md  dbv0_0_37_diag_statistics_users_inner.md  dbv0_0_37_diag_statistics_users_inner_time.md  dbv0_0_37_error.md  dbv0_0_37_job.md  dbv0_0_37_job_array.md  dbv0_0_37_job_array_limits.md  dbv0_0_37_job_array_limits_max.md  dbv0_0_37_job_array_limits_max_running.md  (+352 more)
include/: apiClient.h
model/: dbv0_0_37_account.c  dbv0_0_37_account.h  dbv0_0_37_account_info.c  dbv0_0_37_account_info.h  dbv0_0_37_account_response.c  dbv0_0_37_account_response.h  dbv0_0_37_association.c  dbv0_0_37_association.h  dbv0_0_37_association_default.c  dbv0_0_37_association_default.h  dbv0_0_37_association_max.c  dbv0_0_37_association_max.h  dbv0_0_37_association_max_jobs.c  dbv0_0_37_association_max_jobs.h  dbv0_0_37_association_max_jobs_per.c  dbv0_0_37_association_max_jobs_per.h  dbv0_0_37_association_max_per.c  dbv0_0_37_association_max_per.h  dbv0_0_37_association_max_per_account.c  dbv0_0_37_association_max_per_account.h  dbv0_0_37_association_max_tres.c  dbv0_0_37_association_max_tres.h  dbv0_0_37_association_max_tres_group.c  dbv0_0_37_association_max_tres_group.h  dbv0_0_37_association_max_tres_minutes.c  dbv0_0_37_association_max_tres_minutes.h  dbv0_0_37_association_max_tres_minutes_per.c  dbv0_0_37_association_max_tres_minutes_per.h  dbv0_0_37_association_max_tres_per.c  dbv0_0_37_association_max_tres_per.h  dbv0_0_37_association_min.c  dbv0_0_37_association_min.h  dbv0_0_37_association_short_info.c  dbv0_0_37_association_short_info.h  dbv0_0_37_association_usage.c  dbv0_0_37_association_usage.h  dbv0_0_37_associations_info.c  dbv0_0_37_associations_info.h  dbv0_0_37_cluster_info.c  dbv0_0_37_cluster_info.h  (+740 more)
src/: apiClient.c
unit-test/: test_dbv0_0_37_account.c  test_dbv0_0_37_account_info.c  test_dbv0_0_37_account_response.c  test_dbv0_0_37_association.c  test_dbv0_0_37_association_default.c  test_dbv0_0_37_association_max.c  test_dbv0_0_37_association_max_jobs.c  test_dbv0_0_37_association_max_jobs_per.c  test_dbv0_0_37_association_max_per.c  test_dbv0_0_37_association_max_per_account.c  test_dbv0_0_37_association_max_tres.c  test_dbv0_0_37_association_max_tres_group.c  test_dbv0_0_37_association_max_tres_minutes.c  test_dbv0_0_37_association_max_tres_minutes_per.c  test_dbv0_0_37_association_max_tres_per.c  test_dbv0_0_37_association_min.c  test_dbv0_0_37_association_short_info.c  test_dbv0_0_37_association_usage.c  test_dbv0_0_37_associations_info.c  test_dbv0_0_37_cluster_info.c  test_dbv0_0_37_cluster_info_associations.c  test_dbv0_0_37_cluster_info_controller.c  test_dbv0_0_37_config_info.c  test_dbv0_0_37_config_response.c  test_dbv0_0_37_coordinator_info.c  test_dbv0_0_37_diag.c  test_dbv0_0_37_diag_statistics.c  test_dbv0_0_37_diag_statistics_rollups_inner.c  test_dbv0_0_37_diag_statistics_rpcs_inner.c  test_dbv0_0_37_diag_statistics_rpcs_inner_time.c  test_dbv0_0_37_diag_statistics_users_inner.c  test_dbv0_0_37_diag_statistics_users_inner_time.c  test_dbv0_0_37_error.c  test_dbv0_0_37_job.c  test_dbv0_0_37_job_array.c  test_dbv0_0_37_job_array_limits.c  test_dbv0_0_37_job_array_limits_max.c  test_dbv0_0_37_job_array_limits_max_running.c  test_dbv0_0_37_job_comment.c  test_dbv0_0_37_job_exit_code.c  (+350 more)
